--- a/flat.html
+++ b/flat.html
@@ -3,45 +3,46 @@
 
 <head>
     <meta name="viewport" content="width=device-width, 
-		initial-scale=1">
-    <link rel="stylesheet" media="screen" href="fstyle.css">
-    <link href=
-	'http://fonts.googleapis.com/css?family=Lato&subset=latin,latinext'
-	rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/fontawesome/
-	4.4.0/css/font-awesome.min.css">
-	<script src="clock.js"></script>
+        initial-scale=1">
+    <link rel="stylesheet" media="screen" href="css/fstyle.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latinext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <script src="js/clock.js"></script>
 </head>
 
 <body onload="getTime()" class="color-4">
     <section>
         <div class="time color-0" d="time">FOO</div>
         <div>
-            <div class="news color-1">
+            <div class="news color-1 scroll">
                 <ul>
                     <li class="ellipsis">
                         <h3 class="dark">
-                        	<i class="fa fa-newspaper=o"></i>
-                        	&nbsp;
-                        	Title 1</h3>
+                            <i class="fa fa-newspaper-o"></i>
+                            &nbsp;
+                            Title 1
+                        </h3>
                         <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</P>
                     </li>
                     <li class="ellipsis">
                         <h3 class="dark">
-                        	 <i class="fa fa-newspaper=o"</i>
-                        	&nbsp;Title 2</h3>
+                             <i class="fa fa-newspaper-o"</i>
+                            &nbsp;Title 2
+                        </h3>
                         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </li>
                     <li class="ellipsis">
                         <h3 class="dark">
-                        	<i class="fa fa-newspaper=o"</i>
-                        	&nbsp;Title 3</h3>
+                            <i class="fa fa-newspaper-o"</i>
+                            &nbsp;Title 3
+                        </h3>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                     </li>
                     <li class="ellipsis">
                         <h3 class="dark">
-                        	<i class="fa fa-newspaper=o"</i>
-                        	&nbsp;Title 4</h3>
+                            <i class="fa fa-newspaper-o"</i>
+                            &nbsp;Title 4
+                        </h3>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </li>
                 </ul>
@@ -50,36 +51,36 @@
                 <ul>
                     <li class="ellipsis">
                         <h4 class="dark">
-                        	<i class="fa fa-calendar-check-o"></i>
-							&nbsp;8:00am
+                            <i class="fa fa-calendar-check-o"></i>
+                            &nbsp;8:00am
                         </h4>
                         <p>Wake up, fall out of bed</p>
                     </li>
                     <li class="ellipsis">
                         <h4 class="dark">
-                        	<i class="fa fa-calendar-check-o"></i>
-							&nbsp;9.00am
+                            <i class="fa fa-calendar-check-o"></i>
+                            &nbsp;9.00am
                         </h4>
                         <p>Comb my hair</p>
                     </li>
                     <li class="ellipsis">
                         <h4 class="dark">
-                        	<i class="fa fa-calendar-check-o"></i>
-							&nbsp;10.00am
+                            <i class="fa fa-calendar-check-o"></i>
+                            &nbsp;10.00am
                         </h4>
                         <p>Find your way downstairs and Drink a cup of Tea</p>
                     </li>
                     <li class="ellipsis">
                         <h4 class="dark">
-                        	<i class="fa fa-calendar-check-o "></i>
-							&nbsp;11.00am
+                            <i class="fa fa-calendar-check-o"></i>
+                            &nbsp;11.00am
                         </h4>
                         <p>Looking up, notice Iam late</p>
                     </li>
                     <li class="ellipsis">
                         <h4 class="dark">
-                        	<i class="fa fa-calendar-check-o "></i>
-							&nbsp;12.00am
+                            <i class="fa fa-calendar-check-o"></i>
+                            &nbsp;12.00am
                         </h4>
                         <p>Find my Coat and grab my hat</p>
                     </li>
@@ -94,7 +95,7 @@
                     <ul>
                         <li>
                             <h2>
-                            	<i class="fa fa-cloud fa-3x"></i>
+                                <i class="fa fa-cloud fa-3x"></i>
                             </h2>
                         </li>
                         <li>
@@ -137,9 +138,9 @@
                     <li>
                         <ul>
                             <li>
-                                <span>9</span> 
+                                <span>9</span>
                                 <i class="fa fa-sun-o"></i>
-								<span>95</span>
+                                <span>95</span>
                             </li>
                             <li>
                                 <span>12</span>
@@ -147,10 +148,10 @@
                                 <span>105</span>
                             </li>
                             <li>
-							<span>3</span>
-							<i class="fa fa-cloud"></i>
-							<span>105</span>
-							</li>
+                                <span>3</span>
+                                <i class="fa fa-cloud"></i>
+                                <span>105</span>
+                            </li>
                             <li>
                                 <span>6</span>
                                 <i class="fa fa-cloud"></i>
@@ -164,18 +165,18 @@
         <div>
             <div class="travel color-1 center">
                 <h2>
-                	<i class="fa fa-bicycle fa-4x"></i>
+                    <i class="fa fa-bicycle fa-4x"></i>
                 </h2>
                 <h3>45</h3>
                 <h4 class="dark">Minutes to work</h4>
             </div>
             <div class="stock color-4 center">
-            	<button onclick="doSomething()" class="wetasphalt">
-				more</button>
+                <button onclick="doSomething()" class="wetasphalt">
+                    more</button>
                 <ul>
                     <li>
                         <h2>
-                        	<i class="fa fa-line-chart"></i>
+                            <i class="fa fa-line-chart"></i>
                         </h2>
                     </li>
                     <li>
